Issue #8498: In socket.accept(), allow to specify 0 as a backlog value in order to accept exactly one connection.  Patch by Daniel Evers.